[project]
name = "dexory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []


[tool.poe.tasks]
lint = [
    { cmd = "ruff check --fix src" },
    { cmd = "ruff format src" },
    { cmd = "mypy src" },
]
test = "pytest tests"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "poethepoet>=0.37.0",
    "ruff>=0.14.4",
]
