[project]
name = "adaptive_warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pandas-stubs>=2.2.2.240807",
    "pydantic>=2.12.4",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
    "hydra-core>=1.3.2",
    "ipykernel>=6.31.0",
    "pip>=25.3",
    "matplotlib>=3.9.4",
    "shapely>=2.1.2",
    "descartes>=1.1.0",
    "scipy>=1.16.3",
    "scikit-image>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_warehouse"]


[tool.poe.tasks]
lint = [
    { cmd = "ruff check --fix src workflows" },
    { cmd = "ruff format src workflows" },
    { cmd = "mypy --strict src workflows" },
]
test = "pytest tests"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = false
strict = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]
